tests/kulezi_tests/good/powers_of_2.lat
int main() {
    int two = 2;
    int power = 1;
    int exponent = 1;
    while (exponent < 31) {
        power = power * two;
        printInt(power);
        exponent++;
    }

    return 0;
}