tests/kulezi_tests/bad/stupid_chaining.lat
int main() {
    int x = (2 + 3).x;
    return 0;
}